--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -36,5 +36,9 @@
     "socket.io": "^4.7.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.8",
+    "utf-8-validate": "^6.0.3"
   }
 }
