--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -37,6 +37,7 @@
     "react-image-crop": "^11.0.5",
     "react-modern-drawer": "^1.2.2",
     "react-router-dom": "^6.22.3",
+    "recorder-js": "^1.0.7",
     "redux": "^5.0.1",
     "smooth-scrollbar-react": "^2.4.1",
     "socket.io-client": "^4.7.4",
@@ -44,10 +45,12 @@
     "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "firebase": "^10.10.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
