--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.17.1",
+    "@google/generative-ai": "^0.6.0",
     "@types/node": "^20.11.19",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
