--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -29,6 +29,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.0",
+    "firebase": "^10.11.0",
+    "firebase-admin": "^12.0.0",
     "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
