--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node src/server.ts",
+    "start": "nodemon --exec ts-node src/socketServer.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec ts-node src/server.ts"
+    "dev": "nodemon --exec ts-node src/socketServer.ts"
   },
   "keywords": [],
   "author": "",
